Reader Full Post: Fix misaligned YouTube embeds

--- a/client/blocks/reader-full-post/style.scss
+++ b/client/blocks/reader-full-post/style.scss
@@ -510,8 +510,10 @@
 .reader-full-post .embed-youtube,
 .reader-full-post .embed-vimeo {
 	display: block;
+	margin-bottom: 25px;
 	position: relative;
 	padding: 25px 0 56.25%;
+	text-align: initial !important;
 
 	iframe {
 		height: 100%;
@@ -522,5 +524,5 @@
 }
 
 .reader-full-post .embed-vimeo {
-	margin-bottom: 33px;
+	margin-bottom: 0;
 }
